--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -67,7 +67,7 @@ test_integration:
     - ./gradlew integrationTest
   artifacts:
     paths:
-      - base/build/reports/tests/integrationTest/*
+      - build/reports/tests/integrationTest/*
     when: on_failure
 
 build_docker_image:
@@ -84,7 +84,7 @@ build_docker_image:
   variables:
     HOST_WORKING_DIR: ${CI_PROJECT_DIR}
     MONGOOSE_IMAGE_VERSION: ${CI_COMMIT_SHA}
-    PYTHONPATH: ${PYTHONPATH}:/usr/lib/python2.7/site-packages:base/src/test/robot/lib
+    PYTHONPATH: ${PYTHONPATH}:/usr/lib/python2.7/site-packages:src/test/robot/lib
   before_script:
     - apk add --no-cache --update python py-pip
     - pip install -U virtualenv
@@ -93,16 +93,16 @@ build_docker_image:
     - pip install -U robotframework-requests
     - pip install -U robotframework-csvlibrary
   script:
-    - export MONGOOSE_VERSION=$(cat base/src/main/resources/config/defaults.yaml | grep version | sed -n 's/.*\([0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/p')
+    - export MONGOOSE_VERSION=$(cat src/main/resources/config/defaults.yaml | grep version | sed -n 's/.*\([0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/p')
     - export MONGOOSE_IMAGE_VERSION=${CI_COMMIT_SHA}
     - docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
     - docker load < ${IMAGE_FILE_NAME}
-    - robot --outputdir base/build/robotest --suite ${SUITE} --include ${TEST} base/src/test/robot
+    - robot --outputdir build/robotest --suite ${SUITE} --include ${TEST} src/test/robot
   after_script:
-    - rebot base/build/robotest/output.xml
+    - rebot build/robotest/output.xml
   artifacts:
     paths:
-      - base/build/robotest/*.html
+      - build/robotest/*.html
     when: on_failure
 
 test_api_remote_logs:
