--- a/ci/docker/Dockerfile.robotest
+++ b/ci/docker/Dockerfile.robotest
@@ -9,9 +9,9 @@ RUN apk add --no-cache --update python py-pip \
 
 ENV PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/site-packages:/root/mongoose/base/src/test/robot/lib
 
-ADD base/build /root/mongoose/base/build
+ADD build /root/mongoose/build
 ADD ci/docker/entrypoint_robotest.sh /root/mongoose/ci/docker/entrypoint_robotest.sh
-ADD base/src/test/robot /root/mongoose/base/src/test/robot
+ADD src/test/robot /root/mongoose/src/test/robot
 
 RUN chmod ugo+x /root/mongoose/ci/docker/entrypoint_robotest.sh
 
