--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -14,9 +14,9 @@ services:
 
 stages:
   - build
-#  - test # unit/integration tests
-#  - build_docker_image
-#  - test_functional # functional containerized tests
+  - test # unit/integration tests
+  - build_docker_image
+  - test_functional # functional containerized tests
   - deploy
 
 before_script:
@@ -56,72 +56,72 @@ build:
     paths:
       - build/libs/mongoose-*.jar
 
-test_unit:
-  stage: test
-  script:
-    - ./gradlew test
-
-test_integration:
-  stage: test
-  script:
-    - ./gradlew integrationTest
-  artifacts:
-    paths:
-      - build/reports/tests/integrationTest/*
-    when: on_failure
-
-build_docker_image:
-  stage: build_docker_image
-  script:
-    - docker build -f ci/docker/Dockerfile -t ${IMAGE_NAME}:${CI_COMMIT_SHA} .
-    - docker save ${IMAGE_NAME}:${CI_COMMIT_SHA} > ${IMAGE_FILE_NAME}
-  artifacts:
-    paths:
-      - ${IMAGE_FILE_NAME}
-
-.test_robot:
-  stage: test_functional
-  variables:
-    HOST_WORKING_DIR: ${CI_PROJECT_DIR}
-    MONGOOSE_IMAGE_VERSION: ${CI_COMMIT_SHA}
-    PYTHONPATH: ${PYTHONPATH}:/usr/lib/python2.7/site-packages:src/test/robot/lib
-  before_script:
-    - apk add --no-cache --update python py-pip
-    - pip install -U virtualenv
-    - pip install -U requests
-    - pip install -U robotframework
-    - pip install -U robotframework-requests
-    - pip install -U robotframework-csvlibrary
-  script:
-    - export MONGOOSE_VERSION=$(cat src/main/resources/config/defaults.yaml | grep version | sed -n 's/.*\([0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/p')
-    - export MONGOOSE_IMAGE_VERSION=${CI_COMMIT_SHA}
-    - docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
-    - docker load < ${IMAGE_FILE_NAME}
-    - robot --outputdir build/robotest --suite ${SUITE} --include ${TEST} src/test/robot
-  after_script:
-    - rebot build/robotest/output.xml
-  artifacts:
-    paths:
-      - build/robotest/*.html
-    when: on_failure
-
-test_api_remote_logs:
-  extends: .test_robot
-  variables:
-    SUITE: api.remote
-    TEST: logs
-
-test_api_remote_config:
-  extends: .test_robot
-  variables:
-    SUITE: api.remote
-    TEST: config
-
-test_api_remote_run:
-  extends: .test_robot
-  variables:
-    SUITE: api.remote
-    TEST: run
+#test_unit:
+#  stage: test
+#  script:
+#    - ./gradlew test
+#
+#test_integration:
+#  stage: test
+#  script:
+#    - ./gradlew integrationTest
+#  artifacts:
+#    paths:
+#      - build/reports/tests/integrationTest/*
+#    when: on_failure
+#
+#build_docker_image:
+#  stage: build_docker_image
+#  script:
+#    - docker build -f ci/docker/Dockerfile -t ${IMAGE_NAME}:${CI_COMMIT_SHA} .
+#    - docker save ${IMAGE_NAME}:${CI_COMMIT_SHA} > ${IMAGE_FILE_NAME}
+#  artifacts:
+#    paths:
+#      - ${IMAGE_FILE_NAME}
+#
+#.test_robot:
+#  stage: test_functional
+#  variables:
+#    HOST_WORKING_DIR: ${CI_PROJECT_DIR}
+#    MONGOOSE_IMAGE_VERSION: ${CI_COMMIT_SHA}
+#    PYTHONPATH: ${PYTHONPATH}:/usr/lib/python2.7/site-packages:src/test/robot/lib
+#  before_script:
+#    - apk add --no-cache --update python py-pip
+#    - pip install -U virtualenv
+#    - pip install -U requests
+#    - pip install -U robotframework
+#    - pip install -U robotframework-requests
+#    - pip install -U robotframework-csvlibrary
+#  script:
+#    - export MONGOOSE_VERSION=$(cat src/main/resources/config/defaults.yaml | grep version | sed -n 's/.*\([0-9]\+\.[0-9]\+\.[0-9]\+\).*/\1/p')
+#    - export MONGOOSE_IMAGE_VERSION=${CI_COMMIT_SHA}
+#    - docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+#    - docker load < ${IMAGE_FILE_NAME}
+#    - robot --outputdir build/robotest --suite ${SUITE} --include ${TEST} src/test/robot
+#  after_script:
+#    - rebot build/robotest/output.xml
+#  artifacts:
+#    paths:
+#      - build/robotest/*.html
+#    when: on_failure
+#
+#test_api_remote_logs:
+#  extends: .test_robot
+#  variables:
+#    SUITE: api.remote
+#    TEST: logs
+#
+#test_api_remote_config:
+#  extends: .test_robot
+#  variables:
+#    SUITE: api.remote
+#    TEST: config
+#
+#test_api_remote_run:
+#  extends: .test_robot
+#  variables:
+#    SUITE: api.remote
+#    TEST: run
 
 release_to_maven_repo:
   stage: deploy
