--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -129,11 +129,9 @@ release_to_maven_repo:
     - mkdir -p ~/.gradle
     - echo "signing.keyId=${SIGNING_KEY_ID}" >> ~/.gradle/gradle.properties
     - echo "signing.password=${SIGNING_PASSWORD}" >> ~/.gradle/gradle.properties
-    - echo "ossrhUsername=${OSSRH_USERNAME}" >> ~/.gradle/gradle.properties
-    - echo "ossrhPassword=${OSSRH_PASSWORD}" >> ~/.gradle/gradle.properties
     - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import; fi
     - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust; fi
-    - ./gradlew clean uploadArchives
+    - ./gradlew -PossrhUsername=${OSSRH_USERNAME} -PossrhPassword=${OSSRH_PASSWORD} clean uploadArchives
   only:
     refs:
       - master
