--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -20,7 +20,7 @@ stages:
   - deploy
 
 before_script:
-  - apk --update add --no-cache ca-certificates curl openssl binutils xz
+  - apk --update add --no-cache ca-certificates curl openssl binutils xz gpg
   - curl -Lks https://github.com/AdoptOpenJDK/openjdk11-binaries/releases/download/jdk-11.0.2%2B9/OpenJDK11U-jdk_x64_linux_hotspot_11.0.2_9.tar.gz -o /tmp/jdk11.tgz
   - tar xvf /tmp/jdk11.tgz -C /opt
   - rm -rf /tmp/jdk11.tgz
@@ -131,8 +131,8 @@ release_to_maven_repo:
     - echo "signing.password=${SIGNING_PASSWORD}" >> ~/.gradle/gradle.properties
     - echo "ossrhUsername=${OSSRH_USERNAME}" >> ~/.gradle/gradle.properties
     - echo "ossrhPassword=${OSSRH_PASSWORD}" >> ~/.gradle/gradle.properties
-    - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | gpg --import; fi
-    - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | gpg --import-ownertrust; fi
+    - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 -d | gpg --import; fi
+    - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 -d | gpg --import-ownertrust; fi
     - ./gradlew clean uploadArchives
   only:
     refs:
