--- a/build.gradle
+++ b/build.gradle
@@ -13,19 +13,20 @@ buildscript {
 }
 
 plugins {
+	id "java"
+	id "scala"
+	id "signing"
+	id "maven-publish"
 	id "com.bmuschko.docker-remote-api" version "4.0.5"
 	id "com.diffplug.gradle.spotless" version "3.18.0"
+	id "io.codearte.nexus-staging" version "0.20.0"
+	id "de.marcphilipp.nexus-publish" version "0.2.0"
 }
 
 repositories {
 	jcenter()
 	mavenCentral()
 }
-
-apply plugin: "java"
-apply plugin: "maven"
-apply plugin: "scala"
-apply plugin: "signing"
 
 description = "Mongoose is a high-load storage performance testing tool"
 group = "com.github.emc-mongoose"
@@ -54,7 +55,7 @@ ext {
 		scala              : "2.12.6",
 		slf4j              : "1.7.25",
 		log4j              : "2.8.2",
-		tsdbMetrics        : "0.6.0",
+		prometheus         : "0.6.0",
 	]
 	log4j2PluginsDatPath = Paths.get(
 		"META-INF", "org", "apache", "logging", "log4j", "core", "config", "plugins", "Log4j2Plugins.dat",
@@ -173,9 +174,9 @@ dependencies {
 		"com.github.akurilov:fiber4j:${depVersion.fiber4j}",
 		"com.github.akurilov:java-commons:${depVersion.javaCommons}",
 		"com.lmax:disruptor:${depVersion.disruptor}",
-		"io.prometheus:simpleclient:${depVersion.tsdbMetrics}",
-		"io.prometheus:simpleclient_servlet:${depVersion.tsdbMetrics}",
-		"io.prometheus:simpleclient_hotspot:${depVersion.tsdbMetrics}",
+		"io.prometheus:simpleclient:${depVersion.prometheus}",
+		"io.prometheus:simpleclient_servlet:${depVersion.prometheus}",
+		"io.prometheus:simpleclient_hotspot:${depVersion.prometheus}",
 		"org.apache.logging.log4j:log4j-api:${depVersion.log4j}",
 		"org.apache.logging.log4j:log4j-core:${depVersion.log4j}",
 		"org.eclipse.jetty:jetty-server:${depVersion.jetty}",
@@ -306,11 +307,6 @@ task mergeLog4j2PluginsDat(dependsOn: compileJava) {
 	}
 }
 
-javadoc {
-	failOnError = false
-	classpath += configurations.provided
-}
-
 jar {
 	dependsOn += mergeLog4j2PluginsDat
 	baseName = "mongoose"
@@ -344,9 +340,9 @@ jar {
 	}
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+javadoc {
+	failOnError = false
+	classpath += configurations.provided
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -354,13 +350,20 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 	from javadoc.destinationDir
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+	classifier = "sources"
+	from sourceSets.main.allSource
+}
+
+assemble.dependsOn += jar
+
+// Maven Central deployment ////////////////////////////////////////////////////////////////////////////////////////////
+
 artifacts {
 	archives jar
 	archives sourcesJar
 	archives javadocJar
 }
-
-assemble.dependsOn += jar
 
 signing {
 	required {
@@ -382,39 +385,30 @@ uploadArchives {
 			beforeDeployment {
 				MavenDeployment deployment -> signing.signPom(deployment)
 			}
-
 			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
 				authentication(userName: ossrhUsername, password: ossrhPassword)
 			}
-
 			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
 				authentication(userName: ossrhUsername, password: ossrhPassword)
 			}
-
 			pom {
-
 				groupId = project.group
 				name = project.name
 				artifactId = name
-
 				project {
 					description = project.description
-
 					url "https://github.com/emc-mongoose/mongoose-base"
-
 					scm {
 						connection "https://github.com/emc-mongoose/mongoose-base.git"
 						developerConnection "https://github.com/emc-mongoose/mongoose-base.git"
 						url "https://github.com/emc-mongoose/mongoose-base.git"
 					}
-
 					licenses {
 						license {
 							name "The MIT License (MIT)"
 							url "https://github.com/emc-mongoose/mongoose-base/LICENSE"
 						}
 					}
-
 					developers {
 						developer {
 							id "akurilov"
@@ -426,6 +420,65 @@ uploadArchives {
 			}
 		}
 	}
+}
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			artifactId = project.name
+			groupId = project.group
+			artifact jar
+			artifact javadocJar
+			artifact sourcesJar
+			pom {
+				name = project.name
+				description = project.description
+				url "https://github.com/emc-mongoose/mongoose-base"
+				scm {
+					connection "https://github.com/emc-mongoose/mongoose-base.git"
+					developerConnection "https://github.com/emc-mongoose/mongoose-base.git"
+					url "https://github.com/emc-mongoose/mongoose-base.git"
+				}
+				licenses {
+					license {
+						name "The MIT License (MIT)"
+						url "https://github.com/emc-mongoose/mongoose-base/LICENSE"
+					}
+				}
+				developers {
+					developer {
+						id "akurilov"
+						name "Andrey Kurilov"
+						email "akurilov123@gmail.com"
+					}
+				}
+			}
+		}
+	}
+	repositories {
+		maven {
+			url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+			credentials {
+				username = project.hasProperty("ossrhUsername") ? project.property("ossrhUsername") : null
+				password = project.hasProperty("ossrhPassword") ? project.property("ossrhPassword") : null
+			}
+		}
+	}
+}
+
+nexusPublishing {
+	username.set(project.hasProperty("ossrhUsername") ? project.property("ossrhUsername") : null)
+	password.set(project.hasProperty("ossrhPassword") ? project.property("ossrhPassword") : null)
+}
+
+nexusStaging {
+	username = project.hasProperty("ossrhUsername") ? project.property("ossrhUsername") : null
+	password = project.hasProperty("ossrhPassword") ? project.property("ossrhPassword") : null
+}
+
+task releaseToMavenCentral {
+	dependsOn += uploadArchives
+	dependsOn += closeAndReleaseRepository
 }
 
 // Custom JRE //////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -557,6 +610,8 @@ task robotest(type: DockerWaitContainer, dependsOn: dockerStartContainerRobotest
 		}
 	}
 }
+
+// Code Formatting /////////////////////////////////////////////////////////////////////////////////////////////////////
 
 spotless {
 	format "misc", {
