--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -134,6 +134,7 @@ release_to_maven_repo:
     - echo "ossrhPassword=${OSSRH_PASSWORD}" >> ~/.gradle/gradle.properties
     - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 -d | gpg --import --batch; fi
     - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 -d | gpg --import-ownertrust --batch; fi
+    - ls -l /root/.gnupg
     - ./gradlew publishToNexus closeAndReleaseRepository
   only:
     - latest
