--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -126,16 +126,10 @@ build_docker_image:
 release_to_maven_repo:
   stage: deploy
   script:
-    - mkdir -p ~/.gradle
-    - echo "signing.keyId=${SIGNING_KEY_ID}" >> ~/.gradle/gradle.properties
-    - echo "signing.password=${SIGNING_PASSWORD}" >> ~/.gradle/gradle.properties
-    - echo "signing.secretKeyringFile=/root/.gnupg/secring.gpg" >> ~/.gradle/gradle.properties
-    - echo "ossrhUsername=${OSSRH_USERNAME}" >> ~/.gradle/gradle.properties
-    - echo "ossrhPassword=${OSSRH_PASSWORD}" >> ~/.gradle/gradle.properties
     - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 -d | gpg --import --batch; fi
     - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 -d | gpg --import-ownertrust --batch; fi
-    - ls -l /root/.gnupg
-    - ./gradlew publishToNexus closeAndReleaseRepository
+    - gpg --version
+    - ./gradlew -Psigning.keyId=${SIGNING_KEY_ID} -Psigning.password=${SIGNING_PASSWORD} -PossrhUsername=${OSSRH_USERNAME} -PossrhPassword=${OSSRH_PASSWORD} publishToNexus closeAndReleaseRepository
   only:
     - latest
   except:
