--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -128,7 +128,7 @@ release_to_maven_repo:
   script:
     - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 -d | gpg --import --batch; fi
     - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 -d | gpg --import-ownertrust --batch; fi
-    - if [ ! -z "$GPG_SECRING" ]; then echo $GPG_SECRING | base64 -d | tee /tmp/.gnupg/secring.gpg; fi
+    - if [ ! -z "$GPG_SECRING" ]; then echo $GPG_SECRING | base64 -d > /tmp/.gnupg/secring.gpg; fi
     - gpg --list-secret-keys
     - ./gradlew -Psigning.keyId=${SIGNING_KEY_ID} -Psigning.password=${SIGNING_PASSWORD} -Psigning.secretKeyRingFile=/tmp/.gnupg/secring.gpg -PossrhUsername=${OSSRH_USERNAME} -PossrhPassword=${OSSRH_PASSWORD} publishToNexus closeAndReleaseRepository
   only:
