refactoring [skip ci]

--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -105,9 +105,6 @@ aliasing:
 - name: "load-threads"
   deprecated: true
   target: "storage-driver-limit-concurrency"
-- name: "run-loadStepId"
-  deprecated: true
-  target: "load-step-loadStepId"
 - name: "noop"
   target: "load-op-type=noop"
 - name: "create"
@@ -192,7 +189,7 @@ aliasing:
   target: "storage-driver-limit-concurrency"
 - name: "load-job-name"
   deprecated: true
-  target: "load-step-loadStepId"
+  target: "load-step-id"
 - name: "load-limit-count"
   deprecated: true
   target: "load-op-limit-count"
@@ -210,7 +207,7 @@ aliasing:
 - name: "load-metrics-threshold"
   deprecated: true
   target: "output-metrics-threshold"
-- name: "storage-auth-loadStepId"
+- name: "storage-auth-id"
   deprecated: true
   target: "storage-auth-uid"
 # v3.4.0
@@ -226,7 +223,7 @@ aliasing:
   target: "output-metrics-threshold"
 - name: "test-step-name"
   deprecated: true
-  target: "load-step-loadStepId"
+  target: "load-step-id"
 - name: "test-step-limit-rate"
   deprecated: true
   target: "load-op-limit-rate"
@@ -292,9 +289,9 @@ aliasing:
   target: "run-scenario"
 - name: "test-step-distributed"
   deprecated: true
-- name: "test-step-loadStepId"
+- name: "test-step-id"
   deprecated: true
-  target: "load-step-loadStepId"
+  target: "load-step-id"
 - name: "test-step-limit-count"
   deprecated: true
   target: "load-op-limit-count"
