--- a/kuberenetes/distributed.yaml
+++ b/kuberenetes/distributed.yaml
@@ -9,9 +9,9 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - name: http
-    port: 9999
-    targetPort: 9999
+    - name: data
+      port: 1099
+      targetPort: 1099
 
   selector:
     name: mongoose-node
@@ -49,8 +49,26 @@ spec:
 
       containers:
         - image: emcmongoose/mongoose
-          name: mongoose-driver
+          name: mongoose-node
           args: ["--run-node"]
 
           ports:
-            - containerPort: 9999
+            - containerPort: 1099
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: mongoose
+  namespace: mongoose
+spec:
+  containers:
+    - image: emcmongoose/mongoose
+      name: mongoose
+      command: ["/bin/sh"]
+      args:
+        - "-c"
+        - /opt/mongoose/entrypoint.sh
+          --load-step-limit-time=1m
+          --storage-driver-type=dummy-mock
+          --load-step-node-addrs=mongoose-node-0.mongoose-node,mongoose-node-1.mongoose-node,mongoose-node-2.mongoose-node,mongoose-node-3.mongoose-node
+  restartPolicy: OnFailure
