savepoint [skip ci]

--- a/kuberenetes/distributed.yaml
+++ b/kuberenetes/distributed.yaml
@@ -12,6 +12,9 @@ spec:
     - name: data
       port: 1099
       targetPort: 1099
+#    - name: http
+#      port: 9999
+#      targetPort: 9999
 
   selector:
     name: mongoose-node
@@ -54,6 +57,7 @@ spec:
 
           ports:
             - containerPort: 1099
+#            - containerPort: 9999
 ---
 apiVersion: v1
 kind: Pod
