--- a/kuberenetes/distributed.yaml
+++ b/kuberenetes/distributed.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
 kind: Service
+
 metadata:
   name: mongoose-node
   labels:
@@ -7,14 +8,11 @@ metadata:
   namespace: mongoose
 
 spec:
-  type: LoadBalancer
+  clusterIP: "None"
   ports:
     - name: data
       port: 1099
       targetPort: 1099
-#    - name: http
-#      port: 9999
-#      targetPort: 9999
 
   selector:
     name: mongoose-node
@@ -57,7 +55,6 @@ spec:
 
           ports:
             - containerPort: 1099
-#            - containerPort: 9999
 ---
 apiVersion: v1
 kind: Pod
