REST Api [skip ci]

--- a/kuberenetes/additional-node.yaml
+++ b/kuberenetes/additional-node.yaml
@@ -49,7 +49,7 @@ spec:
 
       containers:
         - image: emcmongoose/mongoose
-          name: mongoose-driver
+          name: mongoose-node
           args: ["--run-node"]
 
           ports:
