--- a/src/test/robot/api/remote/data/aggregated_defaults.yaml
+++ b/src/test/robot/api/remote/data/aggregated_defaults.yaml
@@ -60,6 +60,7 @@ storage:
         output: 1000000
         input: 1000000
       concurrency: 1
+    precondition: true
     type: "dummy-mock"
     threads: 0
   namespace: null
