--- a/src/test/robot/api/remote/data/aggregated_defaults.yaml
+++ b/src/test/robot/api/remote/data/aggregated_defaults.yaml
@@ -62,6 +62,9 @@ storage:
       concurrency: 1
     type: "dummy-mock"
     threads: 0
+  net:
+    node:
+      slice: false
   namespace: null
   auth:
     uid: null
