--- a/src/test/robot/api/remote/data/aggregated_defaults_invalid.yaml
+++ b/src/test/robot/api/remote/data/aggregated_defaults_invalid.yaml
@@ -54,6 +54,9 @@ run:
   scenario: null
   version: "4.2.8"
 storage:
+  net:
+    node:
+      slice: false
   namespace: null
   driver:
     limit:
