--- a/kuberenetes/standalone-deployment.yaml
+++ b/kuberenetes/standalone-deployment.yaml
@@ -15,9 +15,6 @@ spec:
       containers:
         - image: emcmongoose/mongoose
           name: mongoose-controller
-          command: ["/bin/sh"]
           args:
-            - "-c"
-            - /opt/mongoose/entrypoint.sh
-              --load-step-limit-time=1m
+            - --load-step-limit-time=1m
               --storage-driver-type=dummy-mock
